# MachineLearning

./: .gitignore  CMakeLists.txt  MachineLearning.cpp  README.md
MLLib/: CMakeLists.txt
MLLib/include/MLLib/: GKMTrainer.h  KernelTypes.h  LinkFunctionTypes.h  ModifierTypes.h  PrincipalComponentAnalysis.h  RegressionTypes.h  Regressor.h  TypeDefinitions.h
MLLib/include/MLLib/impl/: GKMTrainer.hpp  KernelTypes.hpp  LinkFunctionTypes.hpp  ModifierTypes.hpp  PrincipalComponentAnalysis.hpp  RegressionTypes.hpp  Regressor.hpp
MLLibTests/: CMakeLists.txt  CrossValidationRegressorTests.cpp  FindMinGlobalRegressorTests.cpp  OneShotRegressorTests.cpp  RegressorTests.cpp  RegressorWrapperTests.cpp
